# diskrag

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  README_DOCKER.md  README_QUICKSTART.md  app.py  batch_process.py  build_index.py  build_index_cli.py  config.yaml  config.yaml.example  dataset_benchmark.py  diskrag  diskrag.py  docker-compose.yml  embedding_similarity_test.py  env.example  interactive.py  metadata.py  prepare_data.py  prepare_md_chunks.py  pyproject.toml  requirements.txt  search_cli.py  search_engine.py  test_disk_write_verify.py  verify_data.py  verify_disk_index.py
assets/: docs.md
collections/default/: collection_info.json.bak  metadata.parquet  vectors.npy
configs/: README.md  config.yaml  faq_config.yaml
docs/: FAQ_IMPLEMENTATION_SUMMARY.md  FAQ_WORKFLOW.md
examples/: faq_data.csv
preprocessing/: __init__.py  chunker.py  cli.py  collection.py  config.py  config.yaml.example  embedding.py  processor.py  question_generator.py  requirements.txt
pydiskann/: __init__.py  cython_utils.pyx  pyproject.toml  setup.py  vamana_graph.py
pydiskann/io/: diskann_persist.py
pydiskann/pq/: __init__.py  adaptive_pq.py  fast_pq.py  pq_model.py
scripts/: README_Windows.md  USAGE.md  build_and_push.sh  check_env.sh  create_distribution.sh  demo.sh  docker_process_faq.sh  docker_start.sh  install.bat  install.ps1  install.sh  process_faq.sh  quickstart.sh  run_api_with_check.sh  search_faq.sh  test_faq_workflow.py  test_pydiskann_cython.sh  verify_installation.py
scripts/tools/: README.md  build_index.py  (+4 more)
